updated dependencies added docker support & redis